src/main/java/com/example/gitrepoexplorer/infrastructure/error/dto/UserNotFoundErrorDto.java
package com.example.gitrepoexplorer.infrastructure.error.dto;

public record UserNotFoundErrorDto(int status, String message) {
}
